--- a/Template/Base.lproj/Main.storyboard
+++ b/Template/Base.lproj/Main.storyboard
@@ -17,41 +17,91 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oag-4d-NmL">
-                                <rect key="frame" x="205.5" y="517" width="32" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="32" id="FAf-Jc-rYg"/>
-                                    <constraint firstAttribute="height" constant="30" id="UVg-2U-zeE"/>
-                                </constraints>
-                                <state key="normal" title="Stop"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="34" translatesAutoresizingMaskIntoConstraints="NO" id="Bcp-YU-AzO">
+                                <rect key="frame" x="10" y="25" width="355" height="30"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aJt-yB-7g3">
+                                        <rect key="frame" x="0.0" y="0.0" width="160.5" height="30"/>
+                                        <state key="normal" title="Start"/>
+                                        <connections>
+                                            <action selector="startAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="LUO-5B-4Du"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oag-4d-NmL">
+                                        <rect key="frame" x="194.5" y="0.0" width="160.5" height="30"/>
+                                        <state key="normal" title="Stop"/>
+                                        <connections>
+                                            <action selector="buttonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="k06-Ag-lQy"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="bhV-Yh-Ujw">
+                                <rect key="frame" x="0.0" y="63" width="375" height="604"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ListTableViewCell" rowHeight="69" id="HKa-fx-Luc" customClass="ListTableViewCell" customModule="Template" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="69"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="HKa-fx-Luc" id="FbQ-ZG-z8p">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="68.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" verticalCompressionResistancePriority="749" text="Sample response label Sample " lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NSW-Vc-WnU">
+                                                    <rect key="frame" x="8" y="8" width="359" height="20.5"/>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iSu-dc-cgn">
+                                                    <rect key="frame" x="8" y="36.5" width="359" height="24"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="NSW-Vc-WnU" firstAttribute="top" secondItem="FbQ-ZG-z8p" secondAttribute="top" constant="8" id="0ed-gL-79N"/>
+                                                <constraint firstAttribute="trailing" secondItem="NSW-Vc-WnU" secondAttribute="trailing" constant="8" id="DPI-fX-aBl"/>
+                                                <constraint firstItem="NSW-Vc-WnU" firstAttribute="leading" secondItem="FbQ-ZG-z8p" secondAttribute="leading" constant="8" id="EyO-CT-5cg"/>
+                                                <constraint firstAttribute="trailing" secondItem="iSu-dc-cgn" secondAttribute="trailing" constant="8" id="N6n-Ps-rU0"/>
+                                                <constraint firstItem="iSu-dc-cgn" firstAttribute="leading" secondItem="FbQ-ZG-z8p" secondAttribute="leading" constant="8" id="S3a-Pt-bba"/>
+                                                <constraint firstAttribute="bottom" secondItem="iSu-dc-cgn" secondAttribute="bottom" constant="8" id="d6D-W7-J58"/>
+                                                <constraint firstItem="iSu-dc-cgn" firstAttribute="top" secondItem="NSW-Vc-WnU" secondAttribute="bottom" constant="8" id="tm5-UY-vAg"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="lblResp1" destination="NSW-Vc-WnU" id="wcJ-H6-x6L"/>
+                                            <outlet property="lblResp4" destination="iSu-dc-cgn" id="37i-d4-chL"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
                                 <connections>
-                                    <action selector="buttonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="k06-Ag-lQy"/>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="mdf-m6-WU9"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="Tuc-hU-8SH"/>
                                 </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aJt-yB-7g3">
-                                <rect key="frame" x="138" y="517" width="34" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="MrL-h2-sI1"/>
-                                    <constraint firstAttribute="width" constant="34" id="tb9-wM-dwB"/>
-                                </constraints>
-                                <state key="normal" title="Start"/>
-                                <connections>
-                                    <action selector="startAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="LUO-5B-4Du"/>
-                                </connections>
-                            </button>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="oag-4d-NmL" secondAttribute="bottom" constant="120" id="7ps-SE-cVL"/>
-                            <constraint firstItem="aJt-yB-7g3" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="138" id="HZg-1q-wDC"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="oag-4d-NmL" secondAttribute="trailing" constant="137.5" id="RrG-cI-PXY"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="aJt-yB-7g3" secondAttribute="bottom" constant="120" id="d6I-nx-lZh"/>
+                            <constraint firstItem="Bcp-YU-AzO" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="10B-ZZ-P2j"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Bcp-YU-AzO" secondAttribute="trailing" constant="10" id="59l-JW-unz"/>
+                            <constraint firstItem="bhV-Yh-Ujw" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="5y5-Hr-xE9"/>
+                            <constraint firstItem="bhV-Yh-Ujw" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="IjQ-IU-6Cv"/>
+                            <constraint firstItem="Bcp-YU-AzO" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="5" id="LmN-PU-MT3"/>
+                            <constraint firstItem="bhV-Yh-Ujw" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="kkT-uB-fHE"/>
+                            <constraint firstItem="bhV-Yh-Ujw" firstAttribute="top" secondItem="Bcp-YU-AzO" secondAttribute="bottom" constant="8" id="xuG-R3-lLD"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="listTableView" destination="bhV-Yh-Ujw" id="IRp-c3-xoH"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="133.59999999999999" y="133.5832083958021"/>
         </scene>
     </scenes>
 </document>
